Added Static File monitoring

--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -3,6 +3,7 @@
  
 //Compass imports
 @import "compass";
+@import "compass/reset"; // los browsers by default tienen ciertos estilos, como un border alrededor del body. con esto lo saco.
 @import "compass/css3/box-shadow";
  
 //Core partials
